Fix #112333: Always check links when making groups to remove hidden.

Bug introduced by #112281: the loops for linked and unlinked sockets
were combined to correct socket ordering, but in the process added a
condition that skipped over any unavailable sockets. This disabled an
important part of the link loop, which checks for links to unavailable
sockets and removes them.